# bradley-terry-model

./: README.md  game_record.py  loss.py  main.py  model.py  pyproject.toml
