[project]
name = "bradley-terry-model"
version = "0.1.0"
description = ""
authors = [
    {name = "entfane",email = "nik77kez@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch (>=2.7.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
